--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                 const reader = new FileReader();
                 reader.onload = function(e) {
                     const slot = document.getElementById(slotId);
-                    slot.innerHTML = <img src="${e.target.result}" />;
+                    slot.innerHTML = '<img src="${e.target.result}" />';
                 }
                 reader.readAsDataURL(file);
             }
@@ -351,12 +351,12 @@
                 conf.style.backgroundColor = ['#FF0000', '#FF1493', '#FF69B4', '#FFFFFF'][Math.floor(Math.random() * 4)];
                 conf.style.left = Math.random() * 100 + 'vw';
                 conf.style.top = '-10px';
-                conf.style.transform = rotate(${Math.random() * 360}deg);
+                conf.style.transform = 'rotate(${Math.random() * 360}deg)';
                 document.body.appendChild(conf);
 
                 const animation = conf.animate([
-                    { transform: translate(0, 0) rotate(0deg), opacity: 1 },
-                    { transform: translate(${Math.random() * 200 - 100}px, 100vh) rotate(${Math.random() * 1000}deg), opacity: 0 }
+                    { transform: 'translate(0, 0) rotate(0deg)', opacity: 1 },
+                    { transform: 'translate(${Math.random() * 200 - 100}px, 100vh) rotate(${Math.random() * 1000}deg)', opacity: 0 }
                 ], {
                     duration: Math.random() * 3000 + 2000,
                     easing: 'cubic-bezier(0, .9, .6, 1)'
@@ -393,4 +393,5 @@
 </body>
 
 </html>
+
 
