--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
         <div class="content-wrapper">
             <div class="letter-box">
                 <h2>Dear Nishttha,</h2>
-                <textarea placeholder="When I saw you for the first time in coaching, I liked you instantly. I thought you would be very tough and strict, but I did not give up. I kept trying because I really liked you.
+                <textarea placeholder="When I saw you for the first time in coaching, I liked you instantly. I thought you would be badass, but I did not give up. I kept trying because I really liked you.
 
     When you saw my care and effort, you felt good, and then you came to me on your own. That moment made me very happy. I love you a lot.
     
@@ -401,6 +401,7 @@
 </body>
 
 </html>
+
 
 
 
